  12 Nov 2019;  <chymera@gentoo.org> metadata.xml, samri-0.4.ebuild:
  sci-biology/samri: